# iterai

./: .gitignore  AGENTS.md  README.md  REAMD.md  pyproject.toml
.aiassistant/rules/: code-comments.md  code-style.md  fun.md
.github/workflows/: ci.yaml
docs/: DESIGN_v1.md
iterai/: __init__.py  config.py  dag.py  diff.py  llm.py  node.py  storage.py  types.py
iterai-js/: .gitignore  .npmignore  README.md  eslint.config.js  package-lock.json  package.json  tsconfig.json
iterai-js/src/: config.ts  dag.ts  diff.ts  index.ts  iterai.ts  llm.ts  node.ts  storage.ts  types.ts
iterai-js/tests/: test_iterai.test.ts
iterai-plugin/: README.md  eslint.config.js  manifest.json  options.html  package-lock.json  package.json  popup.html  tsconfig.json  vite.config.ts
iterai-plugin/src/background/: index.ts
iterai-plugin/src/content/: index.ts
iterai-plugin/src/options/: OptionsApp.tsx  SortableModel.tsx  main.tsx  styles.css
iterai-plugin/src/popup/: PopupApp.tsx  main.tsx
iterai-plugin/src/shared/: InfoTooltip.tsx  models.ts  storage.ts
iterai-py/: pyproject.toml
iterai-py/iterai/: __init__.py  cli.py  config.py  dag.py  diff.py  llm.py  node.py  storage.py  types.py
iterai-py/tests/: test_iterai.py
tests/: test_iterai.py
