[tool.poetry]
name = "iterai"
version = "0.2.0"
description = "A local-first, graph-based LLM refinement engine with transparent planning, diff-based evolution, and multi-model synthesis."
authors = ["ra0x3 <spam.rashad@protonmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{ include = "iterai" }]

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
litellm = "^1.34.4"
aiofiles = "^23.2.1"
rich = "^13.9.3"
toml = "^0.10.2"

[tool.poetry.group.dev.dependencies]
black = "^24.8.0"
pytest = "^8.3.3"
pytest-asyncio = "^0.24.0"

[tool.poetry.scripts]
iterai = "iterai.cli:main"

[tool.black]
line-length = 88
target-version = ['py310']

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
